--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -119,8 +119,10 @@ body {
   }
 }
 
-.navbar-default {
-
+@media (min-width: 768px) {
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+      margin-left: 0;
+  }
 }
 
 .navbar-learn {
