--- a/assets/lagunita/css/custom.css
+++ b/assets/lagunita/css/custom.css
@@ -52,7 +52,7 @@ nav ul { margin:0; }
 	display:block; 
 	position:absolute; 
 	z-index:100;
-	left:-210px; 
+	right:-15px; 
 	width:320px; 
 	color: #eeeeee;
 	border-radius:0 0 10px 10px; 
@@ -226,3 +226,92 @@ section {
 .alert.showit{
 	top:0; 
 }
+
+.percent_complete {
+	color:green;
+	float:right; 
+	font-size:70%;
+	text-align:center; 
+}
+.percent_complete span {
+	display:block; 
+	font-size:70%;
+}
+.well .percent_complete {
+	float:none; 
+	font-size:500%; 
+	margin:10px 0;
+}
+
+.well .percent_complete span {
+	display:block; 
+	font-size:25%; 
+}
+
+.surveys { margin:10px 0; padding:0; }
+.surveys li {
+	margin:0 0 15px; padding:0;
+	list-style:none; 
+}
+.surveys .completed:before {
+	background-position-x:0;
+	opacity:1; 
+}
+.surveys a{
+	display:block; 
+	height:88px;
+	text-decoration:none; 
+	font-size:190%;
+	line-height:300%; 
+	margin-left:77px;
+}
+.surveys a:hover {
+	text-decoration:underline;
+}
+.surveys a:before{
+	content:"";
+	opacity:.5;
+	position:absolute; left:0; top:0; 
+	width:67px; height:88px; 
+	background:url(../../img/sprites_fruit.png) 100% 0 no-repeat;
+	transition: .5s opacity;
+}
+
+.surveys .grapes:before 	{background-position-y:-85.5px;}
+.surveys .apple:before 		{background-position-y:-171px;}
+.surveys .orange:before 	{background-position-y:-256.5px;}
+.surveys .cherry:before 	{background-position-y:-342px;}
+.surveys .blueberry:before 	{background-position-y:-427.5px;}
+.surveys .banana:before 	{background-position-y:-513px;}
+.surveys .longan:before 	{background-position-y:-598.5px;}
+.surveys .pineappple:before {background-position-y:-684px;}
+
+.well .surveys li {
+	margin-bottom:10px;
+}
+.well .surveys a{
+	height:44px;
+	font-size:92%;
+	display: table-cell;
+	vertical-align: middle;
+	padding-left:44px;
+	line-height:initial;
+}
+.well .surveys a:before{
+	width:34px; height:44px; 
+	background-size:67px 390px;
+}
+
+.well .surveys .grapes:before 		{background-position-y:-44px;}
+.well .surveys .apple:before 		{background-position-y:-88px;}
+.well .surveys .orange:before 		{background-position-y:-132px;}
+.well .surveys .cherry:before 		{background-position-y:-176px;}
+.well .surveys .blueberry:before	{background-position-y:-220px;}
+.well .surveys .banana:before 		{background-position-y:-264px;}
+.well .surveys .longan:before 		{background-position-y:-308px;}
+.well .surveys .pineappple:before 	{background-position-y:-352px;}
+
+.well .surveys .hot { background:#ffc; }
+
+
+
