--- a/assets/lagunita/css/custom.css
+++ b/assets/lagunita/css/custom.css
@@ -253,10 +253,28 @@ section {
 	margin:0 0 15px; padding:0;
 	list-style:none; 
 }
-.surveys .completed:before {
+
+.completed:before, .fruit_basket a:hover:before {
+	background-position-x:0 !important;
+	opacity:1 !important; 
+}
+
+.secans select , .secans input { display:block; }
+
+.lowhang .footer-links .surveys {
+	width:50%; 
+}
+.lowhang .footer-links { padding:10px 0; }
+.lowhang .surveys { margin:0; }
+.lowhang .surveys a.single {
+	display:inline-block; 
+	margin-left:0;
+}
+.lowhang .surveys a.single:before {
 	background-position-x:0;
 	opacity:1; 
 }
+
 .surveys a{
 	display:block; 
 	height:88px;
@@ -264,6 +282,7 @@ section {
 	font-size:190%;
 	line-height:300%; 
 	margin-left:77px;
+	position:relative; 
 }
 .surveys a:hover {
 	text-decoration:underline;
@@ -271,20 +290,21 @@ section {
 .surveys a:before{
 	content:"";
 	opacity:.5;
-	position:absolute; left:0; top:0; 
+	position:absolute; left:-77px; top:0; 
 	width:67px; height:88px; 
 	background:url(../../img/sprites_fruit.png) 100% 0 no-repeat;
 	transition: .5s opacity;
 }
 
-.surveys .grapes:before 	{background-position-y:-85.5px;}
-.surveys .apple:before 		{background-position-y:-171px;}
-.surveys .orange:before 	{background-position-y:-256.5px;}
-.surveys .cherry:before 	{background-position-y:-342px;}
-.surveys .blueberry:before 	{background-position-y:-427.5px;}
-.surveys .banana:before 	{background-position-y:-513px;}
-.surveys .longan:before 	{background-position-y:-598.5px;}
-.surveys .pineappple:before {background-position-y:-684px;}
+
+.grapes:before 	{background-position-y:-85.5px 		!important;}
+.apple:before 	{background-position-y:-171px		!important;}
+.orange:before 	{background-position-y:-256.5px 	!important;}
+.cherry:before 	{background-position-y:-342px 		!important;}
+.blueberry:before {background-position-y:-427.5px 	!important;}
+.banana:before 	{background-position-y:-513px 		!important;}
+.longan:before 	{background-position-y:-598.5px 	!important;}
+.pineappple:before {background-position-y:-684px 	!important;}
 
 .well .surveys li {
 	margin-bottom:10px;
@@ -296,22 +316,57 @@ section {
 	vertical-align: middle;
 	padding-left:44px;
 	line-height:initial;
+	position:relative; 
 }
 .well .surveys a:before{
+	left:0; 
 	width:34px; height:44px; 
 	background-size:67px 390px;
 }
 
-.well .surveys .grapes:before 		{background-position-y:-44px;}
-.well .surveys .apple:before 		{background-position-y:-88px;}
-.well .surveys .orange:before 		{background-position-y:-132px;}
-.well .surveys .cherry:before 		{background-position-y:-176px;}
-.well .surveys .blueberry:before	{background-position-y:-220px;}
-.well .surveys .banana:before 		{background-position-y:-264px;}
-.well .surveys .longan:before 		{background-position-y:-308px;}
-.well .surveys .pineappple:before 	{background-position-y:-352px;}
+
+
+
+.well .grapes:before 		{background-position-y:-44px  !important;}
+.well .apple:before 		{background-position-y:-88px  !important;}
+.well .orange:before 		{background-position-y:-132px !important;}
+.well .cherry:before 		{background-position-y:-176px !important;}
+.well .blueberry:before		{background-position-y:-220px !important;}
+.well .banana:before 		{background-position-y:-264px !important;}
+.well .longan:before 		{background-position-y:-308px !important;}
+.well .pineappple:before 	{background-position-y:-352px !important;}
 
 .well .surveys .hot { background:#ffc; }
+
+.fruit_basket {
+	margin:0 auto; padding:0;
+	text-align:center; 
+}
+.fruit_basket li { 
+	display:inline-block; 
+	margin:0 5px; 
+}
+.fruit_basket a { 
+	display:block;  
+	width:67px; height:88px; 
+	position:relative; 
+} 
+.fruit_basket a:before{
+	content:"";
+	opacity:.5;
+	position:absolute; left:0; top:0; 
+	width:67px; height:88px; 
+	background:url(../../img/sprites_fruit.png) 100% 0 no-repeat;
+	transition: .5s opacity;
+}
+.fruit_basket .grapes:before 	{background-position-y:-85.5px 		!important;}
+.fruit_basket .apple:before 	{background-position-y:-171px		!important;}
+.fruit_basket .orange:before 	{background-position-y:-256.5px 	!important;}
+.fruit_basket .cherry:before 	{background-position-y:-342px 		!important;}
+.fruit_basket .blueberry:before {background-position-y:-427.5px 	!important;}
+.fruit_basket .banana:before 	{background-position-y:-513px 		!important;}
+.fruit_basket .longan:before 	{background-position-y:-598.5px 	!important;}
+.fruit_basket .pineappple:before {background-position-y:-684px 	!important;}
 
 
 
