--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -14,6 +14,7 @@ h2.weather, .fullDay { display:none !important; }
 .today img { display:inline-block; float:left; margin:0 20px 0 0; }
 
 /*DASHBOARD*/
-.corefour .block { text-align:center; min-height:40px;}
+.corefour .block { text-align:center; min-height:40px; }
 .corefour .disabled span { color:#c3c3c3; }
 .corefour .disabled { background:#e3e3e3; }
+.corefour .disabled a {cursor:default; }
