--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -21,6 +21,9 @@ h2.weather, .fullDay { display:none !important; }
 .corefour .disabled a {cursor:default; }
 
 /*SURVEY FRAMES*/
+.survey .m-b-md {
+  margin-bottom:10px; 
+}
 .surveyFrame { 
 	padding:10px 0; 
 	background:#fff ; 
@@ -32,7 +35,7 @@ h2.weather, .fullDay { display:none !important; }
 	padding:20px; 
 	text-align:Center; 
 }
-.survey .submits .btn { margin:0 5px; }
+.survey .submits .btn { margin:0 8px; border-radius:3px; box-shadow:1px 1px 3px #999;  }
 .survey .submits .progress { 
 	width:60%; 
 	background-color:#ccc; 
@@ -78,6 +81,9 @@ h2.weather, .fullDay { display:none !important; }
 .surveys .completed span:before { 
 	background-position-x:0% !important; 
 	opacity:1; 
+}
+#surveyFrame {
+  height:75vh;
 }
 
 
