--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -72,14 +72,14 @@ h2.weather, .fullDay { display:none !important; }
 	transition: .5s opacity;
 }
 
-.surveys .grapes		  span:before {background-position-y:-85.5px 	!important;}
-.surveys .apple			  span:before {background-position-y:-171px		!important;}
-.surveys .orange		  span:before {background-position-y:-256.5px !important;}
-.surveys .cherry		  span:before {background-position-y:-342px 	!important;}
-.surveys .blueberry   span:before {background-position-y:-427.5px !important;}
-.surveys .banana		  span:before {background-position-y:-513px 	!important;}
-.surveys .longan		  span:before {background-position-y:-598.5px !important;}
-.surveys .pineappple  span:before {background-position-y:-684px 	!important;}
+.alert .grapes:before     ,.surveys .grapes		  span:before {background-position-y:-85.5px 	!important;}
+.alert .apple:before      ,.surveys .apple			  span:before {background-position-y:-171px		!important;}
+.alert .orange:before     ,.surveys .orange		  span:before {background-position-y:-256.5px !important;}
+.alert .cherry:before     ,.surveys .cherry		  span:before {background-position-y:-342px 	!important;}
+.alert .blueberry:before  ,.surveys .blueberry   span:before {background-position-y:-427.5px !important;}
+.alert .banana:before     ,.surveys .banana		  span:before {background-position-y:-513px 	!important;}
+.alert .longan:before     ,.surveys .longan		  span:before {background-position-y:-598.5px !important;}
+.alert .pineappple:before ,.surveys .pineappple  span:before {background-position-y:-684px 	!important;}
 
 .surveys .active span:before , .surveys a:hover span:before{
 	background-position-x:0% !important; 
@@ -94,7 +94,22 @@ h2.weather, .fullDay { display:none !important; }
   height:70vh;
 }
 
-
+.alert span.fruit {
+  display:block;  
+  width:67px; height:88px; 
+  position:relative; 
+  text-indent:-5000px; 
+  margin:0 auto; 
+}
+.alert span.fruit:before{
+  content:"";
+  opacity:1;
+  position:absolute; left:0; top:0; 
+  width:67px; height:88px; 
+  background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
+  background-position-x:0% !important; 
+  transition: .5s opacity;
+}
 /*SESSION ALERT*/
 .alert-info { 
   background:#f0f8ff;
