--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -1,351 +1,768 @@
 
 /*WEATHER WIDGET*/
-h2.weather, .fullDay { display:none !important; }
-.weatherSummary { padding:0; margin:0; border-radius:5px; box-shadow:2px 2px 2px #ccc;}
-.today{
-  width:90%; min-height:150px;
-  margin:0 20px; padding:0; position:relative; 
-  text-shadow:1px 1px #333; 
+h2.weather,
+.fullDay
+{
+    display: none !important;
 }
-.today p { display:inline-block; margin:0 0 5px; padding:0;  }
-.today p:nth-child(3) { position:absolute; left:75px; top:4px; }
-.today p:nth-child(3):before { content:"- ";}
-.today p:nth-child(4), .today p:nth-child(5), .today p:nth-child(6) { float:left; width:50%;  }
-.today p:first-child {display:block; margin:0; }
-.today img { display:inline-block; float:left; margin:0 20px 0 0; }
+.weatherSummary
+{
+    margin: 0;
+    padding: 0;
+
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px #ccc;
+}
+.today
+{
+    position: relative;
+
+    width: 90%;
+    min-height: 150px;
+    margin: 0 20px;
+    padding: 0;
+
+    text-shadow: 1px 1px #333;
+}
+.today p
+{
+    display: inline-block;
+
+    margin: 0 0 5px;
+    padding: 0;
+}
+.today p:nth-child(3)
+{
+    position: absolute;
+    top: 4px; 
+    left: 75px;
+}
+.today p:nth-child(3):before
+{
+    content: '- ';
+}
+.today p:nth-child(4),
+.today p:nth-child(5),
+.today p:nth-child(6)
+{
+    float: left;
+
+    width: 50%;
+}
+.today p:first-child
+{
+    display: block;
+
+    margin: 0;
+}
+.today img
+{
+    display: inline-block;
+    float: left;
+
+    margin: 0 20px 0 0;
+}
+
+#coming_soon{
+  border:1px solid #ddd;
+  border-radius:8px; 
+  text-align:center;
+  font-size:28px; 
+  line-height:150px;
+  height:150px; 
+  background-color: #565656;
+  color: transparent;
+  text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
+  -webkit-background-clip: text;
+     -moz-background-clip: text;
+          background-clip: text;
+}
 
 /*SIMPLE WEATHER WIDGET*/
-#weather { width: auto; }
-#weather ul {
-  margin: 0 0 10px 0; padding: 5px;
-  box-shadow:1px 1px 1px 1px #ccc; 
-  border-radius:3px;
-  min-height:150px; 
-  text-align: center;
+#weather
+{
+    width: auto;
+}
+#weather ul
+{
+    min-height: 150px;
+    margin: 0 0 10px 0;
+    padding: 5px;
+
+    text-align: center;
+
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px 1px #ccc;
 }
 
-.d {
-  /*CLEAR DAYTIME*/
-  background: linear-gradient(to bottom,#6cb2fc 0,#d6e9fe 52%,#7fceff 100%,#d6e9fe 100%,#d6e9fe 100%,#629ce9 100%);
+.d
+{
+    /*CLEAR DAYTIME*/
+    background: linear-gradient(to bottom,#6cb2fc 0,#d6e9fe 52%,#7fceff 100%,#d6e9fe 100%,#d6e9fe 100%,#629ce9 100%);
 }
-.dc {
-  /*CLOUDY/RAINY DAYTIME AFTERNOON*/
-  background: linear-gradient(to bottom,#7789b2 0,#edf3fc 40%,#b3bddb 100%);
+.dc
+{
+    /*CLOUDY/RAINY DAYTIME AFTERNOON*/
+    background: linear-gradient(to bottom,#7789b2 0,#edf3fc 40%,#b3bddb 100%);
 }
-.dac {
-  /*CLOUDY/RAINY AFTERNOON*/
-  background: linear-gradient(to bottom,#d0dae8 0,#eff6ff 40%,#9fc2fc 100%);
+.dac
+{
+    /*CLOUDY/RAINY AFTERNOON*/
+    background: linear-gradient(to bottom,#d0dae8 0,#eff6ff 40%,#9fc2fc 100%);
 }
-.n {
-  /*CLEAR NIGHT*/
-  background: linear-gradient(to bottom,#141414 0,#2c3863 40%,#1d274f 100%);
+.n
+{
+    /*CLEAR NIGHT*/
+    background: linear-gradient(to bottom,#141414 0,#2c3863 40%,#1d274f 100%);
 }
-.nc {
-  /*CLOUDY/RAINY NIGHT*/
-  background: linear-gradient(to bottom,#141414 0,#4f4f54 40%,#26292d 100%);  
-}
-
-#weather li {
-  vertical-align: middle;
-  display: inline-block;
-  color:#000; 
-}
-
-#weather .locale {
-  font-size:18px;
-  font-weight:700;  
+.nc
+{
+    /*CLOUDY/RAINY NIGHT*/
+    background: linear-gradient(to bottom,#141414 0,#4f4f54 40%,#26292d 100%);
 }
 
-#weather .weatherimg { 
-  margin:0 10px;
-  width:190px; 
-  height:130px;  
-  background-repeat:no-repeat; 
+#weather li
+{
+    display: inline-block;
+
+    vertical-align: middle;
+
+    color: #000;
 }
-#weather .temps {
-  font-size:42px; 
-  font-weight:400;
-  line-height:100%;  
-  margin-bottom:8px;
+
+#weather .locale
+{
+    font-size: 18px;
+    font-weight: 700;
 }
-#weather .conditions {
-  font-size:14px;
-  font-weight:bold;  
+
+#weather .weatherimg
+{
+    width: 190px;
+    height: 130px;
+    margin: 0 10px;
+
+    background-repeat: no-repeat;
 }
-#weather .wind {
-  font-weight:normal; 
-  margin-bottom:8px; 
+#weather .temps
+{
+    font-size: 42px;
+    font-weight: 400;
+    line-height: 100%;
+
+    margin-bottom: 8px;
 }
-#weather .hilo {
-  font-size:12px; 
-  font-weight:normal; 
+#weather .conditions
+{
+    font-size: 14px;
+    font-weight: bold;
 }
-#weather b {
-  display:block; 
-  font-weight:normal; 
+#weather .wind
+{
+    font-weight: normal;
+
+    margin-bottom: 8px;
+}
+#weather .hilo
+{
+    font-size: 12px;
+    font-weight: normal;
+}
+#weather b
+{
+    font-weight: normal;
+
+    display: block;
 }
 
 
 
 /*DASHBOARD*/
-.corefour .block { text-align:center; min-height:40px; }
-.corefour .disabled span { color:#c3c3c3; }
-.corefour .disabled { background:#e3e3e3; }
-.corefour .disabled a {cursor:default; }
+.corefour .block
+{
+    min-height: 40px; 
 
-.dker.charttoo { background:#fff; }
+    text-align: center;
+}
+.corefour .disabled span
+{
+    color: #c3c3c3;
+}
+.corefour .disabled
+{
+    background: #e3e3e3;
+}
+.corefour .disabled a
+{
+    cursor: default;
+}
+
+.dker.charttoo
+{
+    background: #fff;
+}
 
 
 /*SURVEY FRAMES*/
-.survey .m-b-md {
-  margin-bottom:10px; 
-}
-#surveyFrame {
-}
-.surveyFrame { 
-	padding:10px 0; 
-	background:#fff ; 
-	border-radius:10px;   
-  position:relative; 
-  height: 70vh;
-  overflow:hidden;
-}
-.surveyFrame iframe {
-  position:absolute;
-  top:0; 
-  left:0; 
-  width:100%; 
-  height:100%; 
+.survey .m-b-md
+{
+    margin-bottom: 10px;
 }
 
-.survey .submits { 
-	clear:both;  
-	padding:20px; 
-	text-align:Center; 
+.surveyFrame
+{
+    position: relative;
+
+    overflow: hidden;
+
+    height: 80vh;
+    padding: 10px 0;
+
+    border-radius: 10px;
+    background: #fff ;
+    /*overflow:auto;*/
 }
-.survey .submits .btn { margin:0 8px; border-radius:3px; box-shadow:1px 1px 3px #999;  }
-.survey .submits .progress { 
-	width:30%; 
-	background-color:#ccc; 
-	margin: 0 auto 20px; 
-}
-.survey .nav-primary .surveys a {
-	display:block;
-	text-align:center; 
+.surveyFrame iframe
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
 }
 
-.btn-back { display:none } 
+.survey .submits
+{
+    clear: both;
+
+    padding: 20px;
+
+    text-align: Center;
+}
+.survey .submits .btn
+{
+    margin: 0 8px;
+
+    border-radius: 3px;
+    box-shadow: 1px 1px 3px #999;
+}
+.survey .submits .progress
+{
+    width: 30%;
+    margin: 0 auto 20px;
+
+    background-color: #ccc;
+}
+.survey .nav-primary .surveys a
+{
+    display: block;
+
+    text-align: center;
+}
+
+.btn-back
+{
+    display: none;
+}
+
+.customform
+{
+    position: relative;
+
+    overflow: hidden;
+
+    width: auto;
+    height: 800px;
+    margin: 0 40px;
+
+    text-align: left;
+}
+.customform .section
+{
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 10px;
+
+    display: inline-block;
+
+    width: calc(100% - 40px);
+    height: 800px;
+    margin: 0 100px 0 20px;
+
+    transition: 1.5s opacity , .4s left ease-in-out;
+    vertical-align: top;
+
+    opacity: 0;
+}
+.customform .section.active
+{
+    z-index: 1;
+    left: 0;
+
+    display: block;
+
+    opacity: 1;
+}
+.customform .section.inactive
+{
+    left: -10px;
+}
+
+.customform .section h2
+{
+    font-size: 120%;
+    line-height: 130%;
+
+    margin: 0 0 10px;
+    padding: 10px;
+
+    color: #333;
+    border-bottom: 1px solid #ddd;
+    border-radius: 5px 5px 0 0;
+    background: #d9edf7;
+}
+
+.customform label
+{
+    display: block;
+}
+.customform .q_label
+{
+    font-weight: bold;
+}
+
+.customform .hasBranching
+{
+    display: none;
+}
+
+.customform input
+{
+    padding: 5px;
+
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.customform .inputwrap,
+.customform .LV
+.customform .LH,
+.customform .RH,
+.customform .RV
+{
+    margin-left: 10px;
+}
+
+.customform .inputwrap
+{
+    margin-bottom: 10px;
+    padding: 10px 0;
+}
+.customform .LV
+{
+    padding: 10px 0 0;
+}
+
+.customform .LV input[type='text']
+{
+    width: 40%;
+}
+
+.customform .LH
+{
+    display: inline-block;
+
+    margin-right: 15px;
+}
+
+.customform .RH label
+{
+    display: inline-block;
+
+    margin-right: 15px;
+}
+
 
 
 
 /*THE FRUITS*/
-.dash_fruits {
-  margin:0; padding:0; 
+.dash_fruits
+{
+    margin: 0;
+    padding: 0;
 }
-.dash_fruits .fruit { 
-  margin-top:20px;
-  margin-right:20px; 
-  text-indent:-5000px;
-}
+.dash_fruits .fruit
+{
+    margin-top: 20px;
+    margin-right: 20px;
 
-
-.surveys span { 
-	display:block;  
-	width:67px; height:88px; 
-	position:relative; 
-	text-indent:-5000px; 
-	margin:0 auto; 
-} 
-.surveys span:before{
-	content:"";
-	opacity:.5;
-	position:absolute; left:0; top:0; 
-	width:67px; height:88px; 
-	background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
-	transition: .5s opacity;
+    text-indent: -5000px;
 }
 
-.alert .grapes:before     ,.surveys .grapes		  span:before {background-position:100% -85.5px 	!important;}
-.alert .apple:before      ,.surveys .apple			span:before {background-position:100% -171px		!important;}
-.alert .orange:before     ,.surveys .orange		  span:before {background-position:100% -256.5px !important;}
-.alert .cherry:before     ,.surveys .cherry		  span:before {background-position:100% -342px 	!important;}
-.alert .blueberry:before  ,.surveys .blueberry  span:before {background-position:100% -427.5px !important;}
-.alert .banana:before     ,.surveys .banana		  span:before {background-position:100% -513px 	!important;}
-.alert .longan:before     ,.surveys .longan		  span:before {background-position:100% -598.5px !important;}
-.alert .pineappple:before ,.surveys .pineappple span:before {background-position:100% -684px 	!important;}
+
+.surveys span
+{
+    position: relative;
+
+    display: block;
+
+    width: 67px;
+    height: 88px;
+    margin: 0 auto;
+
+    text-indent: -5000px;
+}
+.surveys span:before
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 67px;
+    height: 88px;
+
+    content: '';
+    transition: .5s opacity;
+
+    opacity: .5;
+    background: url(../images/sprites_fruit.png) 100% 0 no-repeat;
+}
+
+.alert .grapes:before,
+.surveys .grapes      span:before
+{
+    background-position: 100% -85.5px   !important;
+}
+.alert .apple:before,
+.surveys .apple     span:before
+{
+    background-position: 100% -171px    !important;
+}
+.alert .orange:before,
+.surveys .orange      span:before
+{
+    background-position: 100% -256.5px !important;
+}
+.alert .cherry:before,
+.surveys .cherry      span:before
+{
+    background-position: 100% -342px  !important;
+}
+.alert .blueberry:before,
+.surveys .blueberry  span:before
+{
+    background-position: 100% -427.5px !important;
+}
+.alert .banana:before,
+.surveys .banana      span:before
+{
+    background-position: 100% -513px  !important;
+}
+.alert .longan:before,
+.surveys .longan      span:before
+{
+    background-position: 100% -598.5px !important;
+}
+.alert .pineappple:before,
+.surveys .pineappple span:before
+{
+    background-position: 100% -684px  !important;
+}
 
 /*.surveys .active span:before , */
-.surveys a:hover span:before{
-	background-position-x:0% !important; 
-	opacity:.4; 
+.surveys a:hover span:before
+{
+    opacity: .4;
+    background-position-x: 0 !important;
 }
 
-.surveys .completed span:before { 
-	background-position-x:0% !important; 
-	opacity:1; 
+.surveys .completed span:before
+{
+    opacity: 1;
+    background-position-x: 0 !important;
 }
 
 
-.surveyHeader {  margin:0 40px 20px; padding:15px 0;  border-bottom:1px solid #888;  }
-.surveyanswers {
-  padding:0; 
-  margin-bottom:40px;
+.surveyHeader
+{
+    margin: 0 40px 20px;
+    padding: 15px 0;
+
+    border-bottom: 1px solid #888;
 }
-.surveyanswers li {
-  display:block; 
-  font-size:120%;
-  margin:0 40px 10px;
-  padding-bottom:10px;
-  border-bottom:1px solid #efefef
+.surveyanswers
+{
+    margin-bottom: 40px;
+    padding: 0;
 }
-.surveyanswers li:last-child { border-bottom:0; }
-.surveyanswers li b { 
-  display:inline-block; 
-  margin-right:10px; 
+.surveyanswers li
+{
+    font-size: 120%;
+
+    display: block;
+
+    margin: 0 40px 10px;
+    padding-bottom: 10px;
+
+    border-bottom: 1px solid #efefef;
 }
-.surveyanswers li span { white-space:nowrap;}
+.surveyanswers li:last-child
+{
+    border-bottom: 0;
+}
+.surveyanswers li b
+{
+    display: inline-block;
+
+    margin-right: 10px;
+}
+.surveyanswers li span
+{
+    white-space: nowrap;
+}
+
 
 
 
 
+.alert span.fruit
+{
+    position: relative;
 
-.alert span.fruit {
-  display:block;  
-  width:67px; height:88px; 
-  position:relative; 
-  text-indent:-5000px; 
-  margin:0 auto; 
-}
-.alert span.fruit:before{
-  content:"";
-  opacity:1;
-  position:absolute; left:0; top:0; 
-  width:67px; height:88px; 
-  background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
-  background-position-x:0% !important; 
-  transition: .5s opacity;
-}
-.alert .takenext { 
-  display:table-cell; 
-  margin:12px auto 0;
-  font-size:14px;
-  line-height:14px;
-  padding:10px 0 0;
-}
-.alert .surveyname { 
-  display:block; 
-  font-size:15px; 
-  margin:5px 0;
-}
+    display: block;
 
-.bg-black .nav li > a[rel*='survey']{
-  color:#8287a9 !important;
-}
+    width: 67px;
+    height: 88px;
+    margin: 0 auto;
 
-.nav .fruit {
-  display:inline-block; 
-  width:34px; height:44px; 
-  vertical-align: middle;
-  position: relative;
+    text-indent: -5000px;
 }
+.alert span.fruit:before
+{
+    position: absolute;
+    top: 0;
+    left: 0;
 
-.nav .fruit:before{
-  position:absolute; 
-  content:"";
-  left:0px; 
-  width:34px; height:44px; 
-  background:url(../images/sprites_fruit.png) 100% 0 no-repeat;
-  background-size:67px 390px;
+    width: 67px;
+    height: 88px;
+
+    content: '';
+    transition: .5s opacity;
+
+    opacity: 1;
+    background: url(../images/sprites_fruit.png) 100% 0 no-repeat;
+    background-position-x: 0 !important;
+}
+.alert .takenext
+{
+    font-size: 14px;
+    line-height: 14px;
+
+    display: table-cell;
+
+    margin: 12px auto 0;
+    padding: 10px 0 0;
+}
+.alert .surveyname
+{
+    font-size: 15px;
+
+    display: block;
+
+    margin: 5px 0;
 }
 
-.nav .fruit.grapes:before    {background-position:100% -44px  !important;}
-.nav .fruit.apple:before     {background-position:100% -88px  !important;}
-.nav .fruit.orange:before    {background-position:100% -132px !important;}
-.nav .fruit.cherry:before    {background-position:100% -176px !important;}
-.nav .fruit.blueberry:before {background-position:100% -220px !important;}
-.nav .fruit.banana:before    {background-position:100% -264px !important;}
-.nav .fruit.longan:before    {background-position:100% -308px !important;}
-.nav .fruit.pineappple:before{background-position:100% -352px !important;}
+.bg-black .nav li > a[rel*='survey']
+{
+    color: #8287a9 !important;
+}
 
-.nav .completed.fruit:before { 
-  background-position-x:0% !important; 
-  opacity:1; 
+.nav .fruit
+{
+    position: relative;
+
+    display: inline-block;
+
+    width: 34px;
+    height: 44px;
+
+    vertical-align: middle;
+}
+
+.nav .fruit:before
+{
+    position: absolute;
+    left: 0;
+
+    width: 34px;
+    height: 44px;
+
+    content: '';
+
+    background: url(../images/sprites_fruit.png) 100% 0 no-repeat;
+    background-size: 67px 390px;
+}
+
+.nav .fruit.grapes:before
+{
+    background-position: 100% -44px  !important;
+}
+.nav .fruit.apple:before
+{
+    background-position: 100% -88px  !important;
+}
+.nav .fruit.orange:before
+{
+    background-position: 100% -132px !important;
+}
+.nav .fruit.cherry:before
+{
+    background-position: 100% -176px !important;
+}
+.nav .fruit.blueberry:before
+{
+    background-position: 100% -220px !important;
+}
+.nav .fruit.banana:before
+{
+    background-position: 100% -264px !important;
+}
+.nav .fruit.longan:before
+{
+    background-position: 100% -308px !important;
+}
+.nav .fruit.pineappple:before
+{
+    background-position: 100% -352px !important;
+}
+
+.nav .completed.fruit:before
+{
+    opacity: 1;
+    background-position-x: 0 !important;
 }
 
 
 
 
 /*SESSION ALERT*/
-.alert-info { 
-  background:#f0f8ff;
+.alert-info
+{
+    background: #f0f8ff;
 }
-.alert-danger { 
-  /*background:#f0f8ff;*/
+.alert-danger
+{
+    /*background:#f0f8ff;*/
 }
-.alert-success { 
-  /*background:#f0f8ff;*/
+.alert-success
+{
+    /*background:#f0f8ff;*/
 }
-.alert{
-  position:fixed;
-  top:35%; left:50%;
-  transform: translateY(-50%); 
-  width:40%;
-  margin-left:-20%;
-  /*transition: .9s top ease;*/
-  z-index:1100;
-  box-shadow: 0 0 3px #000;
+.alert
+{
+    position: fixed;
+    /*transition: .9s top ease;*/
+    z-index: 1100;
+    top: 35%;
+    left: 50%;
+
+    width: 40%;
+    margin-left: -20%;
+
+    transform: translateY(-50%);
+
+    box-shadow: 0 0 3px #000;
 }
-.alert + section {
-  position:relative;
+.alert + section
+{
+    position: relative;
 }
-.alert + section:before {
-  position:absolute;
-  content:"";
-  top:0; left:0; right:0; bottom:0;
-  width:100%; height:100%;
-  opacity:.4;
-  background:#333;
-  z-index:100;
+.alert + section:before
+{
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    content: '';
+
+    opacity: .4;
+    background: #333;
 }
-.alert a { 
-  text-decoration:none; 
+.alert a
+{
+    text-decoration: none;
 }
-.alert ul {     
-  margin: 20px 40px 40px; padding:0 0 20px; 
+.alert ul
+{
+    margin: 20px 40px 40px;
+    padding: 0 0 20px;
 }
 
-.alert.multi-message ul {
-  list-style:disc;
+.alert.multi-message ul
+{
+    list-style: disc;
 }
-.alert.multi-message li {     
-  display:block; 
+.alert.multi-message li
+{
+    display: block;
 }
 
-.alert.text-center ul {
-  list-style:none; 
-  margin: 30px 40px 50px;
-}
-.alert .btn {
-  position:fixed;
-  bottom:15px; 
-  left:50%; 
-  width:80px; 
-  margin-left:-40px;
+.alert.text-center ul
+{
+    margin: 30px 40px 50px;
 
+    list-style: none;
+}
+.alert .btn
+{
+    position: fixed;
+    bottom: 15px;
+    left: 50%;
+
+    width: 80px;
+    margin-left: -40px;
 }
 
 /*disabled overide sidenav*/
-.nav-primary a.disabled { 
-	background:#12131a !important; 
-	color:#8287a9 !important;
-	cursor:default; 
+.nav-primary a.disabled
+{
+    cursor: default;
+
+    color: #8287a9 !important;
+    background: #12131a !important;
 }
 
-.nav-primary ul.nav > li > a > .badge {
-  position:absolute; 
-  right:10px; top:10px;
+.nav-primary ul.nav > li > a > .badge
+{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
-.portlet-item { padding:0 0 10px;  min-height:150px; letter-spacing:-.4px;}
-.portlet-item .list-group-item { padding:5px 10px 0; border:none; font-size:12px;  }
-.portlet-item .panel-heading { padding:5px 10px; }
+.portlet-item
+{
+    min-height     : 150px;
+    padding        : 0 0 10px;
+    margin-top     : 10px;
+    letter-spacing : -.4px;
+}
+.portlet-item .list-group-item
+{
+    font-size: 12px;  
+
+    padding: 5px 10px 0;
+
+    border: none;
+}
+.portlet-item .panel-heading
+{
+    padding: 5px 10px;
+}
