--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -355,9 +355,7 @@ h2.weather,
 
 .survey_recap h4{ 
     margin-top:25px; 
-    padding-bottom:5px; 
-    margin-botom:25px;
-    border-bottom:1px solid #ddd; 
+    margin-bottom:5px; padding-bottom:0; 
 }
 
 
