--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -356,6 +356,9 @@ h2.weather,
 .survey_recap h4{ 
     margin-top:25px; 
     margin-bottom:5px; padding-bottom:0; 
+    font-size: 115%;
+    line-height: 140%;
+    color: #333
 }
 
 
