--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -197,7 +197,7 @@ h2.weather,
     padding : 10px 0 0;
     /*border-radius : 10px;*/
     /*background    : #fff ;*/
-    /*overflow      : auto;*/
+    overflow-y      : auto;
 }
 
 .customform {
